--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ill-helper",
   "version": "1.0.0",
+  "type": "module",
   "description": "An extension to assit with extending ILL capabilities. A neatly packaged version of the ILL-extended bot.",
   "main": "ill-helper.js",
   "scripts": {
@@ -15,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/gabei/ILL-helper/issues"
   },
-  "homepage": "https://github.com/gabei/ILL-helper#readme",
-  "dependencies": {
-    "rollup": "^4.46.2"
-  }
+  "homepage": "https://github.com/gabei/ILL-helper#readme"
 }
