--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "An extension to assit with extending ILL capabilities. A neatly packaged version of the ILL-extended bot.",
   "main": "ill-helper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "homepage": "https://github.com/gabei/ILL-helper#readme",
   "dependencies": {
     "web-ext": "^8.9.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
+    "rollup": "^4.46.2"
   }
 }
