--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/gabei/ILL-helper#readme",
   "dependencies": {
+    "fuse.js": "^7.1.0",
     "web-ext": "^8.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "rollup": "^4.46.2"
   }
 }
