revert mainfest back to how it was...

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.worldcat.org/*"],
-      "js": ["dist/main.js"]
+      "js": ["content_scripts/lender-search.js"]
     }
   ]
 }
