--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
+    "lint": "npm run build && web-ext lint",
     "zip": "cd ../ && tar.exe acvf ILL-Helper.zip ILL-helper"
   },
   "repository": {
